--- a/anubis/compose.yaml
+++ b/anubis/compose.yaml
@@ -9,7 +9,7 @@ services:
       # Telling Anubis to do redirect — ensure there is a space after '='
       - 'TARGET= '
       # Specifies which domains Anubis is allowed to redirect to.
-      - REDIRECT_DOMAINS=anubis.${DOMAIN},speedtest.${DOMAIN},${DOMAIN}
+      - REDIRECT_DOMAINS="anubis.${DOMAIN},speedtest.${DOMAIN},${DOMAIN}"
       # Should be the full external URL for Anubis (including scheme)
       - PUBLIC_URL=https://anubis.${DOMAIN}
       # Should match your domain for proper cookie scoping
