--- a/anubis/compose.yaml
+++ b/anubis/compose.yaml
@@ -3,6 +3,8 @@ services:
   anubis:
     image: ghcr.io/techarohq/anubis:v1.23.1
     container_name: anubis
+    ports:
+      - 8080:8080
     environment:
       # Telling Anubis, where to listen for Traefik
       - BIND=:8080
