--- a/anubis/compose.yaml
+++ b/anubis/compose.yaml
@@ -3,8 +3,6 @@ services:
   anubis:
     image: ghcr.io/techarohq/anubis:v1.23.1
     container_name: anubis
-    ports:
-      - 8080:8080
     environment:
       # Telling Anubis, where to listen for Traefik
       - BIND=:8080
@@ -17,6 +15,8 @@ services:
       # Should match your domain for proper cookie scoping
       - COOKIE_DOMAIN="${DOMAIN}"
       - LOG_LEVEL=debug
+    volumes:
+      - /data/config_storage/komodo/etc_komodo/repos/compose_main/anubis/botPolicy.yaml:/data/cfg/botPolicy.yaml:ro
     security_opt:
       - no-new-privileges:true  # helps to increase security
     networks:
