--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -866,3 +866,16 @@ linked_repo = "compose_main"
 run_directory = "drawio"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/drawio-holmie.env"
+
+##
+
+[[stack]]
+name = "n8n-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "n8n-holmie"
+linked_repo = "compose_main"
+run_directory = "n8n"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/n8n-holmie.env"
