--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -879,3 +879,16 @@ linked_repo = "compose_main"
 run_directory = "n8n"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/n8n-holmie.env"
+
+##
+
+[[stack]]
+name = "frigate-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "frigate-holmie"
+linked_repo = "compose_main"
+run_directory = "frigate"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/frigate-holmie.env"
