--- a/frigate/compose.yaml
+++ b/frigate/compose.yaml
@@ -18,7 +18,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /data/config_storage/frigate:/config
-      - /data/config_storage/komodo/etc_komodo/repos/compose_main/frigate/config.yaml:/config/config.yaml:ro
+      #- /data/config_storage/komodo/etc_komodo/repos/compose_main/frigate/config.yaml:/config/config.yaml:ro
+      - /home/holmie/config.yaml:/config/config.yaml
       - /data/mnt/frigate:/media/frigate
       - type: tmpfs  # Optional: 1GB of memory, reduces SSD/SD Card wear
         target: /tmp/cache
