--- a/frigate/config.yaml
+++ b/frigate/config.yaml
@@ -12,11 +12,9 @@ cameras:
         record: preset-record-generic-audio-aac
       inputs:
         - path: /dev/video0
-          # minimal V4L2 args – no fps filter
-          input_args: "-f v4l2 -framerate 30 -video_size 1280x720 -pixel_format yuyv -thread_queue_size 512"
+          input_args: "-f v4l2 -framerate 30 -video_size 1280x720"
           roles:
             - record
-
 
 tls:
   enabled: false
