--- a/frigate/config.yaml
+++ b/frigate/config.yaml
@@ -8,6 +8,7 @@ ffmpeg:
 cameras:
   usb_webcam:
     ffmpeg:
+      hwaccel_args: " "
       output_args:
         record: preset-record-generic-audio-aac
       inputs:
