--- a/anubis/compose.yaml
+++ b/anubis/compose.yaml
@@ -15,6 +15,8 @@ services:
       # Should match your domain for proper cookie scoping
       - COOKIE_DOMAIN="holmlab.org"
       - LOG_LEVEL=debug
+    volumes:
+      - /data/config_storage/komodo/etc_komodo/repos/compose_main/anubis/botPolicy.yaml:/data/cfg/botPolicy.yaml:ro
     security_opt:
       - no-new-privileges:true  # helps to increase security
     networks:
