--- a/syncs/procedure.toml
+++ b/syncs/procedure.toml
@@ -156,3 +156,50 @@ executions = [
   { execution.type = "DeployStack", execution.params.stack = "tidal-ui-holmie", execution.params.services = [], enabled = true },
   { execution.type = "DeployStack", execution.params.stack = "mullvad_browser-holmie", execution.params.services = [], enabled = true }
 ]
+
+##
+
+[[procedure]]
+name = "restart_gluetun'd - holmgarage"
+description = "Restart ALL containers connected to ANY gluetun instance"
+config.webhook_enabled = false
+config.schedule_alert = false
+
+[[procedure.config.stage]]
+name = "stop gluetun"
+enabled = true
+executions = [
+  { execution.type = "DestroyStack", execution.params.stack = "gluetun-holmgarage", execution.params.services = [], execution.params.remove_orphans = false, enabled = true }
+]
+
+[[procedure.config.stage]]
+name = "start gluetun"
+enabled = true
+executions = [
+  { execution.type = "DeployStack", execution.params.stack = "gluetun-holmgarage", execution.params.services = [], execution.params.remove_orphans = false, enabled = true }
+]
+
+[[procedure.config.stage]]
+name = "pause"
+enabled = false
+executions = [
+  { execution.type = "Sleep", execution.params.duration_ms = 500, enabled = true }
+]
+
+[[procedure.config.stage]]
+name = "stop else"
+enabled = true
+executions = [
+  { execution.type = "DestroyStack", execution.params.stack = "qbittorrent-holmgarage", execution.params.services = [], execution.params.remove_orphans = false, enabled = true },
+  { execution.type = "DestroyStack", execution.params.stack = "jackett-holmgarage", execution.params.services = [], execution.params.remove_orphans = false, enabled = true },
+  { execution.type = "DestroyStack", execution.params.stack = "searxng-holmgarage", execution.params.services = [], execution.params.remove_orphans = false, enabled = true }
+]
+
+[[procedure.config.stage]]
+name = "start else"
+enabled = true
+executions = [
+  { execution.type = "DeployStack", execution.params.stack = "qbittorrent-holmgarage", execution.params.services = [], enabled = true },
+  { execution.type = "DeployStack", execution.params.stack = "jackett-holmgarage", execution.params.services = [], enabled = true },
+  { execution.type = "DeployStack", execution.params.stack = "searxng-holmgarage", execution.params.services = [], enabled = true }
+]
