--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -866,3 +866,16 @@ linked_repo = "compose_main"
 run_directory = "frigate"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/frigate-holmie.env"
+
+##
+
+[[stack]]
+name = "musicassistant-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "musicassistant-holmie"
+linked_repo = "compose_main"
+run_directory = "musicassistant"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/musicassistant-holmie.env"
