--- a/syncs/mck.toml
+++ b/syncs/mck.toml
@@ -75,3 +75,20 @@ linked_repo = "compose_main"
 run_directory = "mck_hugo"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/mck_hugo-mck.env"
+
+##
+
+[[stack]]
+name = "homeassistant-mck"
+tags = ["mck", "criticality: 1"]
+[stack.config]
+server = "mck"
+links = [
+  "http://100.84.68.110:8123",
+  "http://192.168.1.24:8123"
+]
+project_name = "homeassistant-mck"
+linked_repo = "compose_main"
+run_directory = "homeassistant"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/homeassistant-mck.env"
