--- a/gluetun/compose.yaml
+++ b/gluetun/compose.yaml
@@ -20,6 +20,7 @@ services:
       - DOT=off
       - DNS_PLAINTEXT_ADDRESS=${DNS_PLAINTEXT_ADDRESS}
       - HTTPPROXY=on
+      - WIREGUARD_PRESHARED_KEY=${WIREGUARD_PRESHARED_KEY}
     ports:
       - 8888:8888/tcp  # HTTP proxy
       - 8388:8388/tcp  # Shadowsocks
