--- a/syncs/procedure.toml
+++ b/syncs/procedure.toml
@@ -156,8 +156,7 @@ executions = [
   { execution.type = "DestroyStack", execution.params.stack = "jackett-holmie", execution.params.services = [], execution.params.remove_orphans = false, enabled = true },
   { execution.type = "DestroyStack", execution.params.stack = "searxng-holmie", execution.params.services = [], execution.params.remove_orphans = false, enabled = true },
   { execution.type = "DestroyStack", execution.params.stack = "freshrss-holmie", execution.params.services = [], execution.params.remove_orphans = false, enabled = true },
-  { execution.type = "DestroyStack", execution.params.stack = "tidal-ui-holmie", execution.params.services = [], execution.params.remove_orphans = false, enabled = true },
-  { execution.type = "DestroyStack", execution.params.stack = "mullvad_browser-holmie", execution.params.services = [], execution.params.remove_orphans = false, enabled = true }
+  { execution.type = "DestroyStack", execution.params.stack = "tidal-ui-holmie", execution.params.services = [], execution.params.remove_orphans = false, enabled = true }
 ]
 
 [[procedure.config.stage]]
@@ -168,8 +167,7 @@ executions = [
   { execution.type = "DeployStack", execution.params.stack = "jackett-holmie", execution.params.services = [], enabled = true },
   { execution.type = "DeployStack", execution.params.stack = "searxng-holmie", execution.params.services = [], enabled = true },
   { execution.type = "DeployStack", execution.params.stack = "freshrss-holmie", execution.params.services = [], enabled = true },
-  { execution.type = "DeployStack", execution.params.stack = "tidal-ui-holmie", execution.params.services = [], enabled = true },
-  { execution.type = "DeployStack", execution.params.stack = "mullvad_browser-holmie", execution.params.services = [], enabled = true }
+  { execution.type = "DeployStack", execution.params.stack = "tidal-ui-holmie", execution.params.services = [], enabled = true }
 ]
 
 ##
