--- a/qbittorrent/compose.yaml
+++ b/qbittorrent/compose.yaml
@@ -9,6 +9,8 @@ services:
       - TZ=America/New_York
       - TORRENTING_PORT=6881
       - WEBUI_PORT=8080
+    ports:
+      - 6881:6881
     volumes:
       - /data/config_storage/arr/qbittorrent:/config
       - /data/config_storage/arr/qbittorrent/complete:/complete
