--- a/qbittorrent/compose.yaml
+++ b/qbittorrent/compose.yaml
@@ -7,7 +7,7 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/New_York
-      - TORRENTING_PORT=10866
+      - TORRENTING_PORT=${TORRENTING_PORT}
       - WEBUI_PORT=8080
     volumes:
       - /data/config_storage/arr/qbittorrent:/config
