--- a/syncs/holmgarage.toml
+++ b/syncs/holmgarage.toml
@@ -305,7 +305,10 @@ server = "holmgarage"
 project_name = "gluetun-holmgarage"
 linked_repo = "compose_main"
 run_directory = "gluetun"
-additional_env_files = ["/etc/komodo/domain.env"]
+additional_env_files = [
+  "/etc/komodo/domain.env",
+  "/etc/komodo/qbit_port.env"
+]
 env_file_path = "/etc/komodo/env/gluetun-holmgarage.env"
 
 ##
@@ -318,7 +321,10 @@ server = "holmgarage"
 project_name = "qbittorrent-holmgarage"
 linked_repo = "compose_main"
 run_directory = "qbittorrent"
-additional_env_files = ["/etc/komodo/domain.env"]
+additional_env_files = [
+  "/etc/komodo/domain.env",
+  "/etc/komodo/qbit_port.env"
+]
 env_file_path = "/etc/komodo/env/qbittorrent-holmgarage.env"
 
 ##
