--- a/adsb/compose.yaml
+++ b/adsb/compose.yaml
@@ -6,6 +6,14 @@ services:
     container_name: ultrafeeder
     hostname: ultrafeeder
     restart: unless-stopped
+    tmpfs:
+      - '/tmp:size=64m'
+    read_only: true
+    cap_add:
+      - NET_BIND_SERVICE
+    cap_drop:
+      - ALL
+    init: true
     device_cgroup_rules:
       - "c 189:* rwm"
     environment:
