--- a/netalertx/compose.yaml
+++ b/netalertx/compose.yaml
@@ -4,9 +4,28 @@ services:
     volumes:
       - /data/config_storage/netalertx:/data
       - /etc/localtime:/etc/localtime:ro
+    read_only: true
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
+      - NET_BIND_SERVICE
+    tmpfs:
+      - "/tmp:uid=20211,gid=20211,mode=1700,rw,noexec,nosuid,nodev,async,noatime,nodiratime"
     environment:
-      - TZ=America/New_York
       - PORT=20211
+      - LISTEN_ADDR=0.0.0.0
+      - GRAPHQL_PORT=${GRAPHQL_PORT:-20212}
+    mem_limit: 2048m
+    mem_reservation: 1024m
+    cpu_shares: 512
+    pids_limit: 512
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     container_name: netalertx
     restart: unless-stopped
     image: jokobsk/netalertx:25.11.29
