--- a/syncs/holmgarage.toml
+++ b/syncs/holmgarage.toml
@@ -391,3 +391,16 @@ linked_repo = "compose_main"
 run_directory = "actualbudget"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/actualbudget-holmgarage.env"
+
+##
+
+[[stack]]
+name = "bentopdf-holmgarage"
+tags = ["holmgarage", "criticality: 1"]
+[stack.config]
+server = "holmgarage"
+project_name = "bentopdf-holmgarage"
+linked_repo = "compose_main"
+run_directory = "bentopdf"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/bentopdf-holmgarage.env"
