--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -859,3 +859,16 @@ linked_repo = "compose_main"
 run_directory = "bentopdf"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/bentopdf-holmie.env"
+
+##
+
+[[stack]]
+name = "unbound-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "unbound-holmie"
+linked_repo = "compose_main"
+run_directory = "unbound"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/unbound-holmie.env"
