--- a/unbound/pi-hole.conf
+++ b/unbound/pi-hole.conf
@@ -1,7 +1,7 @@
 server:
     # If no logfile is specified, syslog is used
-    # logfile: "/var/log/unbound/unbound.log"
-    verbosity: 0
+    logfile: "/log/unbound.log"
+    verbosity: 1
 
     interface: 127.0.0.1
     port: 5335
