--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -872,3 +872,16 @@ linked_repo = "compose_main"
 run_directory = "unbound"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/unbound-holmie.env"
+
+##
+
+[[stack]]
+name = "dnscrypt-proxy-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "dnscrypt-proxy-holmie"
+linked_repo = "compose_main"
+run_directory = "dnscrypt-proxy"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/dnscrypt-proxy-holmie.env"
