--- a/dnscrypt-proxy/compose.yaml
+++ b/dnscrypt-proxy/compose.yaml
@@ -9,3 +9,28 @@ services:
     ports:
       - '5053:5053/udp'
       - '5053:5053/tcp'
+      - 8880:8080
+    security_opt:
+      - no-new-privileges:true  # helps to increase security
+    networks:
+      - intranet
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.dnscrypt.entrypoints=http"
+      - "traefik.http.routers.dnscrypt.rule=Host(`dnscrypt.${DOMAIN}`)"
+      - "traefik.http.middlewares.dnscrypt-https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.dnscrypt.middlewares=dnscrypt-https-redirect"
+      - "traefik.http.routers.dnscrypt-secure.entrypoints=https"
+      - "traefik.http.routers.dnscrypt-secure.rule=Host(`dnscrypt.${DOMAIN}`)"
+      - "traefik.http.routers.dnscrypt-secure.tls=true"
+      - "traefik.http.routers.dnscrypt-secure.service=dnscrypt"
+      - "traefik.http.services.dnscrypt.loadbalancer.server.port=8880"  # port of the service.
+      - "traefik.docker.network=intranet"
+      - "homepage.group=Other"
+      - "homepage.name=dnscrypt"
+      - "homepage.icon=/images/dnscrypt.png"
+      - "homepage.href=https://dnscrypt.${DOMAIN}/"
+
+networks:
+  intranet:
+    external: true
