--- a/dnscrypt-proxy/compose.yaml
+++ b/dnscrypt-proxy/compose.yaml
@@ -5,6 +5,7 @@ services:
     container_name: dnscrypt
     volumes:
       - /data/config_storage/dnscrypt:/logs
+      - /data/config_storage/dnscrypt:/config
       #- /data/config_storage/komodo/etc_komodo/repos/compose_main/dnscrypt-proxy/example-dnscrypt-proxy.toml:/config/dnscrypt-proxy.toml:ro
     ports:
       - '5053:5053/udp'
