--- a/dnscrypt-proxy/compose.yaml
+++ b/dnscrypt-proxy/compose.yaml
@@ -3,10 +3,10 @@ services:
   dnscrypt-proxy:
     image: klutchell/dnscrypt-proxy:2.1.14
     container_name: dnscrypt
-    volumes:
-      - /data/config_storage/dnscrypt/logs:/logs
-      - /data/config_storage/dnscrypt/config:/config
-      - /data/config_storage/komodo/etc_komodo/repos/compose_main/dnscrypt-proxy/example-dnscrypt-proxy.toml:/config/dnscrypt-proxy.toml:ro
+#    volumes:
+#      - /data/config_storage/dnscrypt/logs:/logs
+#      - /data/config_storage/dnscrypt/config:/config
+#      - /data/config_storage/komodo/etc_komodo/repos/compose_main/dnscrypt-proxy/example-dnscrypt-proxy.toml:/config/dnscrypt-proxy.toml:ro
     ports:
       - '5053:5053/udp'
       - '5053:5053/tcp'
