no git controlled

--- a/dnscrypt-proxy/compose.yaml
+++ b/dnscrypt-proxy/compose.yaml
@@ -6,7 +6,7 @@ services:
     volumes:
       - /data/config_storage/dnscrypt/logs:/logs
       - /data/config_storage/dnscrypt/config:/config
-      - /data/config_storage/komodo/etc_komodo/repos/compose_main/dnscrypt-proxy/dnscrypt-proxy.toml:/config/dnscrypt-proxy.toml:ro
+      #- /data/config_storage/komodo/etc_komodo/repos/compose_main/dnscrypt-proxy/dnscrypt-proxy.toml:/config/dnscrypt-proxy.toml:ro
     ports:
       - '5053:5053/udp'
       - '5053:5053/tcp'
