--- a/bichon/compose.yaml
+++ b/bichon/compose.yaml
@@ -7,6 +7,7 @@ services:
       - BICHON_LOG_LEVEL=info
     volumes:
       - /data/config_storage/bichon:/data
+      - /data/config_storage/email_archive:/email_archive
     container_name: bichon
     security_opt:
       - no-new-privileges:true  # helps to increase security
