--- a/n8n/compose.yaml
+++ b/n8n/compose.yaml
@@ -4,6 +4,7 @@ services:
     image: docker.n8n.io/n8nio/n8n:1.123.4
     volumes:
       - /data/config_storage/n8n:/home/node/.n8n
+      - /tmp/n8n:/tmp
     environment:
       - N8N_RUNNERS_ENABLED=true
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
