--- a/syncs/builds.toml
+++ b/syncs/builds.toml
@@ -3,10 +3,12 @@ name = "build_skywatch"
 description = "Goal: to get this to trigger on commits to skywatch.py"
 [build.config]
 builder = "holmie"
-auto_increment_version = true
 image_name = "skywatch"
 files_on_host = true
 build_path = "/etc/komodo/stacks/skywatch/skywatch"
+image_registry = [
+  { domain = "git.holmlab.org", account = "shady" }
+]
 
 ##
 
