--- a/syncs/builds.toml
+++ b/syncs/builds.toml
@@ -20,3 +20,6 @@ auto_increment_version = true
 image_name = "tidal-ui"
 files_on_host = true
 build_path = "/etc/komodo/repos/tidal-ui"
+image_registry = [
+  { domain = "git.holmlab.org", account = "shady" }
+]
