--- a/syncs/builds.toml
+++ b/syncs/builds.toml
@@ -16,10 +16,13 @@ image_registry = [
 name = "build_tidal-ui"
 [build.config]
 builder = "holmie"
-auto_increment_version = true
 image_name = "tidal-ui"
 files_on_host = true
 build_path = "/etc/komodo/repos/tidal-ui"
 image_registry = [
   { domain = "git.holmlab.org", account = "shady" }
 ]
+pre_build.path = "/etc/komodo/repos/tidal-ui"
+pre_build.command = """
+git pull
+"""
