--- a/tidal-ui/compose.yaml
+++ b/tidal-ui/compose.yaml
@@ -1,7 +1,7 @@
 ---
 services:
   tidal-ui:
-    image: tidal-ui
+    image: git.holmlab.org/shady/tidal-ui:0.0.13
     container_name: tidal-ui
     restart: unless-stopped
     environment:
