--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -883,3 +883,16 @@ linked_repo = "compose_main"
 run_directory = "bichon"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/bichon-holmie.env"
+
+##
+
+[[stack]]
+name = "wazuh-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "wazuh-holmie"
+linked_repo = "compose_main"
+run_directory = "wazuh"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/wazuh-holmie.env"
