--- a/syncs/shady_desktop.toml
+++ b/syncs/shady_desktop.toml
@@ -59,3 +59,16 @@ linked_repo = "compose_main"
 run_directory = "foldingathome"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/foldingathome-shady_desktop.env"
+
+##
+
+[[stack]]
+name = "harborguard-shady_desktop"
+tags = ["shady_desktop", "criticality: 1"]
+[stack.config]
+server = "shady_desktop"
+project_name = "harborguard-shady_desktop"
+linked_repo = "compose_main"
+run_directory = "harborguard"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/harborguard-shady_desktop.env"
