--- a/harborguard/compose.yaml
+++ b/harborguard/compose.yaml
@@ -6,6 +6,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     security_opt:
       - no-new-privileges:true  # helps to increase security
+    ports:
+      - '3000:3000'
     networks:
       - intranet
     labels:
