--- a/ai/compose.yaml
+++ b/ai/compose.yaml
@@ -30,8 +30,8 @@ services:
     container_name: open-webui
     image: ghcr.io/open-webui/open-webui:0.6.43
     restart: unless-stopped
-    environment:
-      - OLLAMA_BASE_URL=https://ollama.${DOMAIN}
+#    environment:
+#      - OLLAMA_BASE_URL=https://ollama.${DOMAIN}
     security_opt:
       - no-new-privileges:true  # helps to increase security
     networks:
