--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -896,3 +896,16 @@ linked_repo = "compose_main"
 run_directory = "aircraft"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/aircraft-holmie.env"
+
+##
+
+[[stack]]
+name = "openwebui-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "openwebui-holmie"
+linked_repo = "compose_main"
+run_directory = "openwebui"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/openwebui-holmie.env"
