--- a/syncs/procedure.toml
+++ b/syncs/procedure.toml
@@ -116,7 +116,8 @@ executions = [
   { execution.type = "RunSync", execution.params.sync = "servers", enabled = true },
   { execution.type = "RunSync", execution.params.sync = "shady_desktop", enabled = true },
   { execution.type = "RunSync", execution.params.sync = "mck", enabled = true },
-  { execution.type = "RunSync", execution.params.sync = "snow", enabled = true }
+  { execution.type = "RunSync", execution.params.sync = "snow", enabled = true },
+  { execution.type = "RunSync", execution.params.sync = "turret", enabled = true }
 ]
 
 ##
