--- a/syncs/turret.toml
+++ b/syncs/turret.toml
@@ -3,7 +3,7 @@ name = "adsb"
 tags = ["turret", "env", "criticality: 3", "ephemoral"]
 [stack.config]
 server = "turret"
-project_name = "adsb"
+project_name = "adsb-turret"
 linked_repo = "compose_main"
 run_directory = "adsb"
 additional_env_files = ["/etc/komodo/domain.env"]
