--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -922,3 +922,16 @@ linked_repo = "compose_main"
 run_directory = "crafty"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/crafty-holmie.env"
+
+##
+
+[[stack]]
+name = "ngrok-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "ngrok-holmie"
+linked_repo = "compose_main"
+run_directory = "ngrok"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/ngrok-holmie.env"
